--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     ],
     "require": {
         "php": "8.1.*",
-        "ext-redis": "*"
+        "ext-redis": "*",
+        "ext-igbinary": "*"
     }
 }
