--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -19,8 +19,10 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install extensions
 RUN pecl install -o -f redis \
-    &&  rm -rf /tmp/pear \
-    &&  docker-php-ext-enable redis
+    && pecl install -o -f igbinary \
+    && rm -rf /tmp/pear \
+    && docker-php-ext-enable redis \
+    && docker-php-ext-enable igbinary
 
 # Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
