--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
     ],
     "require": {
         "php": "8.1.*",
+        "ext-pdo": "*",
         "ext-redis": "*",
-        "ext-igbinary": "*"
+        "ext-igbinary": "*",
+        "eventsauce/eventsauce": "^1.4",
+        "eventsauce/message-repository-for-illuminate": "^0.2.1",
     }
 }
